Implemented API endpoits for sending emails, regiters and password reset for now
